--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -4,27 +4,14 @@
     padding: calc(var(--spacing-large) - var(--spacing-small)) calc(var(--spacing-large) - var(--spacing-medium));
 
     .app-brand {
+        display: block;
         flex-shrink: 0;
+        outline: none;
         padding: var(--spacing-small) var(--spacing-medium);
+        text-transform: uppercase;
+        text-decoration: none;
+        color: var(--color-accent);
         font-size: var(--font-size-large);
-    }
-
-    .nav-links {
-        display: flex;
-        flex-grow: 1;
-        justify-content: center;
-        padding: 0 calc(var(--spacing-medium) - var(--spacing-small));
-
-        .link {
-            display: block;
-            outline: none;
-            padding: var(--spacing-small) var(--spacing-medium);
-            text-decoration: none;
-            color: rgba(0, 0, 0, .3);
-
-            &.active {
-                color: var(--color-accent);
-            }
-        }
+        font-weight: var(--font-weight-bold);
     }
 }
