--- a/src/Root/App/styles.css
+++ b/src/Root/App/styles.css
@@ -5,6 +5,9 @@
     --spacing-large: 16px;
 
     --color-accent: #786cf4;
+    --color-danger: firebrick;
+    --color-success: forestgreen;
+
     --color-background-card: #fafafa;
     --color-separator: #f0f0f0;
 
