--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -26,7 +26,7 @@
 
     &.transparent {
         &.accent {
-            color: var(--color-accent);
+            color: var(--color-primary);
         }
 
         &.danger {
@@ -56,7 +56,7 @@
         }
 
         &.accent {
-            background-color: var(--color-accent);
+            background-color: var(--color-primary);
             color: var(--color-text-on-accent);
         }
 
