Add option to unlink

--- a/src/views/Home/LinkListing/AddedItem/styles.css
+++ b/src/views/Home/LinkListing/AddedItem/styles.css
@@ -27,6 +27,12 @@
             padding: var(--spacing-small);
         }
 
+        .current-linked {
+            flex-basis: 50%;
+            border-left: var(--width-separator-thin) solid var(--color-separator);
+            padding: var(--spacing-small);
+        }
+
         .deleted-areas-container {
             flex-basis: 50%;
             border-left: var(--width-separator-thin) solid var(--color-separator);
