--- a/src/Root/App/styles.css
+++ b/src/Root/App/styles.css
@@ -13,7 +13,7 @@
 }
 
 :root {
-    /* spacing */
+    /* SPACING */
     --spacing-super-small: 1px;
     --spacing-extra-small: 3px;
     --spacing-small: 6px;
@@ -22,20 +22,20 @@
     --spacing-large-medium: 13px;
     --spacing-large: 16px;
 
-    /* radius */
+    /* RADIUS */
 
     --radius-button: 4px;
     --radius-input: 4px;
     --radius-modal: 8px;
 
-    /* dimensions */
+    /* DIMENSIONS */
     --width-separator-thin: 1px;
     --width-separator-medium: 2px;
 
     --width-sidepanel: 420px;
     --width-scrollbar: 7px;
 
-    /* font size */
+    /* FONT SIZE */
     --font-size-extra-small: 10px;
     --font-size-small: 11px;
     --font-size-small-medium: 12px;
@@ -44,12 +44,12 @@
     --font-size-large: 18px;
     --font-size-extra-large: 24px;
 
-    /* font weight */
+    /* FONT WEIGHT */
     --font-weight-light: 400;
     --font-weight-medium: 400;
     --font-weight-bold: 700;
 
-    /* color palette */
+    /* COLOR PALETTE */
     --color-primary: #6200ee;
     --color-accent: #03dac6;
     --color-danger: #f34236;
@@ -57,20 +57,20 @@
     --color-warning: tomato;
 
 
-    /* color general */
+    /* COLOR GENERAL */
     --color-background: #fff;
     --color-background-dark: #f5f5f5;
     --color-background-added-area: #e1c7fd;
     --color-background-removed-area: #ffbdc3;
 
 
-    --color-background-accent-hint: #18cc9c55; /* fixme: remove this usage */
-    /* color backdrop */
+    --color-background-accent-hint: #18cc9c55; /* FIXME: remove this usage */
+    /* COLOR BACKDROP */
 
     --color-backdrop-light: rgba(255, 255, 255, .8);
     --color-backdrop-dark: rgba(0, 0, 0, .5);
 
-    /* color input */
+    /* COLOR INPUT */
     --color-input-background: #dae0e7;
     --color-input-background-errored: #f1e1e3;
     --color-input-background-disabled: #e4e9ef;
@@ -79,12 +79,12 @@
     --color-button-background: #dae0e7;
     --color-button-background-disabled: #e4e9ef;
 
-    /* color shadow */
+    /* COLOR SHADOW */
 
     --color-shadow: rgba(0, 0, 0, .3);
 
 
-    /* color text */
+    /* COLOR TEXT */
     --color-text: #243244;
 
     --color-text-on-primary: rgba(255, 255, 255, .9);
@@ -104,7 +104,7 @@
     --color-text-label: #576374;
     --color-text-disabled: #b8c2cd;
 
-    /* color separator */
+    /* COLOR SEPARATOR */
     --color-separator: #b8c2cd;
 }
 
