Add clickable map

--- a/src/views/Home/LinkListing/styles.css
+++ b/src/views/Home/LinkListing/styles.css
@@ -2,26 +2,27 @@
     display: flex;
     flex-direction: column;
     padding: var(--spacing-medium);
-    overflow-y: auto;
 
     .block {
         display: flex;
         flex-basis: calc(50% - var(--spacing-medium));
         flex-direction: column;
         margin: var(--spacing-small) calc(var(--spacing-medium) / 2);
-        overflow-y: auto;
 
-        >h2 {
+        .header {
+            display: flex;
+            align-items: center;
             margin: 0 calc(var(--spacing-medium) / 2);
-        }
+            padding: var(--spacing-small) 0;
 
-        .block-heading {
-            flex-shrink: 0;
-        }
+            >h2 {
+                flex-grow: 1;
+            }
 
-        .text-input {
-            margin: 0 calc(var(--spacing-medium) / 2);
-            max-width: 192px;
+            .text-input {
+                flex-shrink: 1;
+                max-width: 192px;
+            }
         }
 
         .block-content {
@@ -30,7 +31,6 @@
             align-items: flex-start;
             flex-grow: 1;
             flex-wrap: wrap;
-            overflow-y: auto;
 
             .item {
                 align-self: stretch;
@@ -53,12 +53,14 @@
     .unlinked-content {
         display: flex;
         flex-grow: 1;
+        overflow-x: hidden;
         overflow-y: auto;
     }
 
     .linked-content {
         display: flex;
         flex-grow: 1;
+        overflow-x: hidden;
         overflow-y: auto;
 
         .block {
