Add next and previous button in comparision map

--- a/src/views/Home/LinkListing/LinkUnlinkModal/styles.css
+++ b/src/views/Home/LinkListing/LinkUnlinkModal/styles.css
@@ -5,6 +5,10 @@
     min-width: 720px;
     overflow-y: auto;
 
+    .button {
+        margin-left: var(--spacing-small);
+    }
+
     .link-modal-body {
         display: flex;
         flex-grow: 1;
