--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -82,7 +82,8 @@
 
         &:disabled {
             background-color: var(--color-button-background-disabled);
-            color: var(--color-text);
+            cursor: not-allowed;
+            color: var(--color-text-disabled);
         }
 
         &:not(:disabled) {
