--- a/src/views/Home/AdminLevels/styles.css
+++ b/src/views/Home/AdminLevels/styles.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: var(--spacing-large);
+    border-radius: var(--radius-card);
     background-color: var(--color-background-card);
     padding: var(--spacing-medium);
     overflow-y: auto;
